redesign login page

--- a/source code/Style/style-home.css
+++ b/source code/Style/style-home.css
@@ -124,4 +124,14 @@ body { font-family: sans-serif; }
   display: none;
 }
 
+.btn {
+    background-color: DodgerBlue;
+    border: none;
+    color: white;
+    padding: 12px 16px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+
 
