Station page by gayan

--- a/source code/Style/style-custom-combo.css
+++ b/source code/Style/style-custom-combo.css
@@ -7,8 +7,23 @@
     display: none; /*hide original SELECT element:*/
   }
   
+  .custom-select {
+    display: inline-block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem 1.75rem .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    vertical-align: middle;
+    background-color: #fff;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    -webkit-appearance: none;
+
   .select-selected {
-    background-color: gray;
+    background-color: white;
   }
   
   /*style the arrow inside the select element:*/
@@ -31,8 +46,7 @@
   
   /*style the items (options), including the selected item:*/
   .select-items div,.select-selected {
-    color: #ffffff;
-    padding: 8px 16px;
+    color: black;
     border: 1px solid transparent;
     border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
     cursor: pointer;
@@ -42,7 +56,7 @@
   /*style items (options):*/
   .select-items {
     position: absolute;
-    background-color: #A0A0A0;
+    background-color: white;
     top: 100%;
     left: 0;
     right: 0;
