--- a/source code/View/TrainDetails.html
+++ b/source code/View/TrainDetails.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -113,29 +114,25 @@
                                         <h2>Refine Results</h2>
                                         <hr>
                                         <h3>Train Type</h3>
-                                        <form action="">
-                                                <div class="custom-select" style="width:98%; margin-left: 1%">
-                                                        <select>
-                                                                <option value="0">Select type:</option>
-                                                                <option value="1">EXPRESS</option>
-                                                                <option value="2">COLOMBO COMMUTER</option>
-                                                                <option value="3">LONG DISTANCE</option>
-                                                                <option value="4">NIGHT MAIL</option>
-                                                        </select>
-                                                </div>
+                                        <select class="custom-select">
+                                                        <option selected>Select Type :</option>
+                                                        <option value="1">EXPRESS</option>
+                                                        <option value="2">COLOMBO COMMUTER</option>
+                                                        <option value="3">LONG DISTANCE</option>
+                                                        <option value="3">NIGHT MAIL</option>
+                                        </select>
+                
+                                        <h3></br>Train Class</h3>
+                                        <select class="browser-default custom-select">
+                                                        <option selected>Select Class :</option>
+                                                        <option value="1">CLASS A</option>
+                                                        <option value="2">CLASS B</option>
+                                                        <option value="3">CLASS C</option>
+                                        </select>                        
 
-                                                <h3>Train Class</h3>
-                                                <div class="custom-select" style="width:98%; margin-left: 1%">
-                                                        <select>
-                                                                <option value="0">Select Class:</option>
-                                                                <option value="1">Class A</option>
-                                                                <option value="2">Class B</option>
-                                                                <option value="3">Class C</option>
-                                                        </select>
-                                                </div>
 
                                                 <div id="grpAvailable">
-                                                        <h3>Facilities</h3>
+                                                        <h3></br>Facilities</h3>
                                                         <label class="container-T">AC
                                                                 <input type="radio" checked="checked"
                                                                         name="grpAvailable">
