--- a/source code/View/station.html
+++ b/source code/View/station.html
@@ -53,64 +53,66 @@
     <div style="height:100%">
     
         <input type="text" placeholder="Search here...." id="search-bar1" name="search-bar1">
-
+        <br/><br/>
         <h1 id="h1-cus">Five Trains Run Via Colombo Fort Station</h1>
-        <br/><br/><br/><br/>
+        <br/><br/><br/>
 
-        <div>
-            <table>
-                <tr id="header-color">
-                  <th>Code</th>
-                  <th>Name</th>
-                  <th>RunsOn</th>
-                  <th>Arrives</th>
-                  <th>Halt</th>
-                  <th>Depart</th>
-            
-                </tr>
-                <tr>
-                    <td>20140</td>
-                    <td>Yal Devi</td>
-                    <td>MTWTFSS</td>
-                    <td>08.00 A.M.</td>
-                    <td>No Delay</td>
-                    <td>08.15 A.M</td>
-                </tr>
-                <tr>
-                  <td>24350</td>
-                  <td>Ruhunu Kumari</td>
-                  <td>MTWTFSS</td>
-                  <td>09.15 A.M</td>
-                  <td>No Delay</td>
-                  <td>09.20 A.M</td>
-            
-                </tr>
-                <tr>
-                        <td>33768</td>
-                        <td>Udarata Menike</td>
+        <div class="tb-margin">
+            <table class="table">
+                <thead class="black white-text">
+                      <tr>
+                        <th scope="col">Code</th>
+                        <th scope="col">Nme</th>
+                        <th scope="col">Runs On</th>
+                        <th scope="col">Arrives</th>
+                        <th scope="col">Halt</th>
+                        <th scope="col">Depart</th>
+                      </tr>
+                </thead>
+                <tbody>
+                      <tr class="tr0">
+                        <td>20140</td>
+                        <td>Yal Devi</td>
                         <td>MTWTFSS</td>
-                        <td>07.00 A.M</td>
+                        <td>08.00 A.M.</td>
                         <td>No Delay</td>
-                        <td>07.10 A.M</td>
-                </tr>
-                <tr>
-                        <td>10670</td>
-                        <td> Rajarata Rejini</td>
-                        <td>MTWTFSS</td>
-                        <td>10.00 A.M</td>
-                        <td>No Delay</td>
-                        <td>10.15 A.M</td>
-                </tr>
-                <tr>
-                        <td>28160</td>
-                        <td> Badulu Kumari</td>
-                        <td>MTWTFSS</td>
-                        <td>08.30 A.M</td>
-                        <td>No Delay</td>
-                        <td>08.40 A.M</td>
-                </tr>
-                      
+                        <td>08.15 A.M</td>
+                      </tr>
+                    <tr>
+                            <td>24350</td>
+                            <td>Ruhunu Kumari</td>
+                            <td>MTWTFSS</td>
+                            <td>09.15 A.M</td>
+                            <td>No Delay</td>
+                            <td>09.20 A.M</td>
+                        </tr>
+                        <tr>
+                            <td>33768</td>
+                            <td>Udarata Menike</td>
+                            <td>MTWTFSS</td>
+                            <td>07.00 A.M</td>
+                            <td>No Delay</td>
+                            <td>07.10 A.M</td>
+                        </tr>
+                        <tr>
+                            <td>10670</td>
+                            <td> Rajarata Rejini</td>
+                            <td>MTWTFSS</td>
+                            <td>10.00 A.M</td>
+                            <td>No Delay</td>
+                            <td>10.15 A.M</td>
+                    </tr>
+                    <tr>
+                            <td>28160</td>
+                            <td> Badulu Kumari</td>
+                            <td>MTWTFSS</td>
+                            <td>08.30 A.M</td>
+                            <td>No Delay</td>
+                            <td>08.40 A.M</td>
+                    </tr>
+                </tbody>
             </table>
+
         </div>
     </div>
     <!--Footer -->
